Bug 362821 - Brush editor dialog: bad layout on HiDPI
Summary: Brush editor dialog: bad layout on HiDPI
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 3.0 Beta
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-08 16:43 UTC by Ilya V. Portnov
Modified: 2016-05-25 12:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Brush editor screenshot (230.74 KB, image/png)
2016-05-08 16:43 UTC, Ilya V. Portnov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ilya V. Portnov 2016-05-08 16:43:16 UTC
Similar to bug #362525. Will attach a screenshot. Curve editing area is not expanding when I resize the dialog.

Reproducible: Always
Comment 1 Ilya V. Portnov 2016-05-08 16:43:48 UTC
Created attachment 98844 [details]
Brush editor screenshot
Comment 2 Halla Rempt 2016-05-15 12:11:46 UTC
Can you check what happens if you build Krita after commit 0d0edba4133616839548123e7578307c729c4063, and start with the environmentment variable KRITA_HIDPI set?
Comment 3 Ilya V. Portnov 2016-05-15 13:19:21 UTC
I currently do not have krita building environment on the laptop where i have hidpi display. Will this commit be included in one of next lime ppa build or appimages? Or is it debug-only?
Comment 4 Sergey 2016-05-23 15:00:30 UTC
I have that bug, how subscribe?
Comment 5 Dmitry Kazakov 2016-05-25 12:15:11 UTC
Git commit 28d69c4ad677447eb955bb5789673ea1ced176de by Dmitry Kazakov.
Committed on 25/05/2016 at 12:14.
Pushed by dkazakov into branch 'master'.

Fix layouts in the PaintOp Settings Popup

1) Make categorized list view return a correct size hint
2) Fix layouts everywhere

Fixes T2588

M  +5    -11   libs/ui/forms/wdgpaintopsettings.ui
M  +19   -9    libs/ui/kis_categorized_item_delegate.cpp
M  +1    -2    libs/ui/kis_categorized_item_delegate.h
M  +11   -9    libs/ui/kis_paintop_settings_widget.cpp
M  +9    -1    libs/ui/widgets/kis_categorized_list_view.cpp
M  +1    -1    libs/ui/widgets/kis_categorized_list_view.h
M  +2    -2    libs/ui/widgets/kis_cmb_composite.cc
M  +1    -1    libs/ui/widgets/kis_paintop_list_widget.cpp
M  +5    -25   plugins/paintops/curvebrush/wdgcurveoptions.ui
M  +296  -290  plugins/paintops/dynadraw/wdgdynaoptions.ui
M  +142  -138  plugins/paintops/libpaintop/forms/wdgcurveoption.ui
M  +24   -20   plugins/paintops/tangentnormal/wdgtangenttiltoption.ui

http://commits.kde.org/krita/28d69c4ad677447eb955bb5789673ea1ced176de