Fix layouts in the PaintOp Settings Popup

1) Make categorized list view return a correct size hint
2) Fix layouts everywhere

Fixes T2588
BUG:362821