libs/ui/widgets/kis_categorized_list_view.h
@@ -32,7 +32,7 @@ public:
     virtual ~KisCategorizedListView();
     virtual void setModel(QAbstractItemModel* model);
 
-
+    QSize sizeHint() const;
 
 
 Q_SIGNALS:
